tests/ui/transmutability/references/reject_lifetime_extension.stderr
error[E0521]: borrowed data escapes outside of function
  --> $DIR/reject_lifetime_extension.rs:80:18
   |
LL |     fn call_extend_hrtb<'a>(src: &'a u8) -> &'static u8 {
   |                         --  --- `src` is a reference that is only valid in the function body
   |                         |
   |                         lifetime `'a` defined here
LL |         unsafe { extend_hrtb(src) }
   |                  ^^^^^^^^^^^^^^^^
   |                  |
   |                  `src` escapes the function body here
   |                  argument requires that `'a` must outlive `'static`
   |
note: due to current limitations in the borrow checker, this implies a `'static` lifetime
  --> $DIR/reject_lifetime_extension.rs:85:25
   |
LL |         for<'b> &'b u8: TransmuteFrom<&'a u8>,
   |                         ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0521`.
